grpc-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: yages
spec:
  to:
    kind: Service
    name: yages
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: |-
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEIAW+ecg2cZR47ItbI898N3nJduh9UJNv+b0cOwH/Z1BEoAoGCCqGSM49
[...]
      4UYpwAW/t63qBx3jRhPgkUxh5saJP9Qu5Q==
      -----END EC PRIVATE KEY-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIBgTCCASagAwIBAgIRALutWdExjxX8fWljW+lcYbswCgYIKoZIzj0EAwIwJDEQ
[...]
      PaUMdqg=
      -----END CERTIFICATE-----
  selector:
    app: yages
